# culling_games

./: .gitignore  LICENSE  README.md  generate_maze.py  teste.py
maps/: default.csv
src/Culling_Games/: package.xml  setup.cfg  setup.py
src/cg/: package.xml  setup.cfg  setup.py
src/cg/cg/: Editor.py  Game.py  Maze.py  Robot.py  main.py  teste.py
src/cg/cg/Utils/: Csv.py  Finders.py  Grid.py  Screen.py
src/cg/maps/: 1.csv  10.csv  2.csv  3.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv  test.csv
src/cg_interfaces/: CMakeLists.txt  package.xml
src/cg_interfaces/msg/: RobotSensors.msg
src/cg_interfaces/srv/: GetMap.srv  MoveCmd.srv  MoveDirection.srv  Reset.srv
src/cg_teleop/: package.xml  setup.cfg  setup.py
src/cg_teleop/cg_teleop/: teleop_node.py
