<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cg</name>
  <version>0.0.0</version>
  <description>Culling games package</description>
  <maintainer email="rodrigo.nicola0@gmail.com">rnicola</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>cg_interfaces</exec_depend>

  <build_depend>rclpy</build_depend>
  <build_depend>cg_interfaces</build_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
